Removed logo class and fixed line spacing

--- a/app/scss/indexPage.scss
+++ b/app/scss/indexPage.scss
@@ -2,28 +2,31 @@
 
 * {
   box-sizing: border-box;
+  font-size: 100%;
 
   body {
     font-family: 'Asap', sans-serif;
 
-    .logo {
-      width: 300px;
-      float: right;
-      margin: 2%;
-    }
+    .container {
+      .start-button {
+        width: 110px;
+        background: $primary-button;
+        border: 1px solid $main-background-color;
+        color: $main-background-color;
+        font-size: 15px;
+        padding: 6px 20px;
+        text-decoration: none;
+        transition: .5s;
 
-    .start-button {
-      width: 110px;
-      background: $primary-button;
-      border: 1px solid $main-background-color;
-      color: $main-background-color;
-      font-size: 15px;
-      padding: 6px 20px;
-      text-decoration: none;
-      transition: .5s;
+        &:hover {
+          background-color: $primary-button-hover;
+        }
+      }
 
-      &:hover {
-        background-color: $primary-button-hover;
+      .text-center {
+        p {
+          margin: 10px;
+        }
       }
     }
 
